# python-gen-worker

./: .dockerignore  .gitignore  01-run.pid  AUDIT.md  CHANGELOG.md  Dockerfile  Dockerfile.base  Dockerfile.base.cpu  Dockerfile.example  Dockerfile.template  Guide_Private_Package.md  OrchestratorGuide.md  README.md  Taskfile.yml  client.py  client_test.py  client_test_comprehensive.py  pyproject.toml  requirements.txt  test_client.py  test_client_2.py  test_client_3.py  test_client_4.py
agents/: README.md  completed.json  completed.md  endpoint-release-v1-spec.md  future.json  future.md  gw551_pod_validate.py  progress.json  progress.md
docs/: compile-cache.md  convert.md  cookbook-acceleration.md  cookbook-async-handlers.md  cookbook-audio.md  cookbook-batched-llm.md  cookbook-image-diffusion.md  cookbook-stages.md  cookbook-video-diffusion.md  custom-trainer-authoring.md  dockerfile.md  endpoint-authoring.md  endpoint-envs.md  endpoint-toml.md  environment.md  host-integration.md  issue-080-class-only-trainer-contract-plan.md  issue-080-migration-inventory.md  issue-081-orchestrated-trainer-runtime.md  issue-157-trainer-runtime-core.md  issue-159-trainer-runtime-contract.md  issue-162-trainer-artifacts-resume-metrics.md  local-dev.md  metrics.md  model-selectable-endpoints.md  model-transfer-architecture.md  payload-ref-binding.md  scaling-hints.md  shared-model-components.md  system-boundaries.md  terminology.md  worker-stuck-visibility.md
example-functions/demo/: pyproject.toml
example-functions/demo/src/demo/: __init__.py
examples/firered-image-edit/: Dockerfile  README.md  endpoint.toml  pyproject.toml  tensorhub.toml
examples/firered-image-edit/src/firered_image_edit/: main.py
examples/flux2-klein-4b/: Dockerfile  README.md  cozy.toml  endpoint.toml  pyproject.toml  tensorhub.toml
examples/flux2-klein-4b/src/flux2_klein_4b/: __init__.py  main.py
examples/flux2-klein-9b/: Dockerfile  README.md  endpoint.toml  pyproject.toml
examples/flux2-klein-9b/src/flux2_klein_9b/: main.py
examples/flux2-klein-image/: README.md  pyproject.toml
examples/flux2-klein-image/src/flux2_klein_image/: main.py
examples/from-scratch/: .dockerignore  README.md  endpoint.toml  from_scratch.py  pyproject.toml
examples/hello-world/: README.md  pyproject.toml
examples/hello-world/src/hello_world/: __init__.py
examples/hub-artifact-echo/: pyproject.toml
examples/hub-artifact-echo/src/hub_artifact_echo/: main.py
examples/image-gen/: Dockerfile  README.md  cozy.toml  endpoint.toml  pyproject.toml  tensorhub.toml
examples/image-gen-legacy/: pyproject.toml
examples/image-gen-legacy/src/image_gen/: __init__.py
examples/image-gen/src/image_gen/: __init__.py  main.py
examples/marco-polo/: .dockerignore  Dockerfile  README.md  endpoint.toml  pyproject.toml
examples/marco-polo/src/marco_polo/: main.py
examples/medasr-transcribe/: .dockerignore  Dockerfile  README.md  cozy.toml  endpoint.toml  pyproject.toml  tensorhub.toml
examples/medasr-transcribe/src/medasr_transcribe/: __init__.py  main.py
examples/multi-sdxl-checkpoints/: Dockerfile  README.md  cozy.toml  endpoint.toml  pyproject.toml  tensorhub.toml
examples/multi-sdxl-checkpoints/src/multi_sdxl_checkpoints/: main.py
examples/openai-codex/: .dockerignore  Dockerfile  README.md  cozy.toml  endpoint.toml  pyproject.toml  tensorhub.toml
examples/openai-codex/src/openai_codex_worker/: main.py
examples/orchestrator-examples/: README.md  pyproject.toml
examples/orchestrator-examples/src/examples/: __init__.py  example.py
examples/qwen-edit-hub-image/: pyproject.toml
examples/qwen-edit-hub-image/src/qwen_edit_hub_image/: main.py
examples/qwen-image-2512/: .dockerignore  Dockerfile  README.md  cozy.toml  endpoint.toml  pyproject.toml  tensorhub.toml
examples/qwen-image-2512/src/qwen_image_2512/: main.py
examples/sd15/: .dockerignore  Dockerfile  Dockerfile.local  README.md  cozy.toml  endpoint.toml  pyproject.toml  tensorhub.toml
examples/sd15-hub-image/: README.md  pyproject.toml
examples/sd15-hub-image/src/sd15_hub_image/: main.py
examples/sd15-image/: README.md  pyproject.toml
examples/sd15-image/src/sd15_image/: main.py
examples/sd15/src/sd15/: __init__.py  main.py
examples/z-image-lora/: Dockerfile  README.md  cozy.toml  endpoint.toml  pyproject.toml  tensorhub.toml
examples/z-image-lora/src/z_image_lora/: main.py
examples/zimage-hub-image/: pyproject.toml
examples/zimage-hub-image/src/zimage_hub_image/: main.py
functions/image_gen/: pyproject.toml
functions/image_gen/src/image_gen/: __init__.py  image_gen.py
image_gen_example/: Dockerfile  pyproject.toml  requirements.txt
image_gen_example/src/image_gen/: __init__.py
old/example-functions/demo/: pyproject.toml
old/example-functions/image_gen/: pyproject.toml
old/example-functions/image_gen/src/image_gen/: __init__.py  image_gen.py
old/py-gen-orchestrator/: pyproject.toml
old/py-gen-orchestrator/examples/: pyproject.toml
old/py-gen-orchestrator/examples/src/examples/: example.py
old/py-gen-orchestrator/src/gen_orchestrator/: __init__.py  worker.py
old/py-gen-orchestrator/src/gen_orchestrator/pb/: __init__.py  frontend_pb2.py  frontend_pb2_grpc.py  worker_scheduler_pb2.py  worker_scheduler_pb2_grpc.py
proto/: CONTRACT.md  worker_scheduler.proto
scripts/: benchmark_model_transfer.py  check_no_deployment_legacy.sh  convert_to_flashpack.py  lint_http_timeouts.py  quantize_fp8.py  safetensors_diffusers_converter.py  w4a4_parity.py  w8a8_lora_bench.py  w8a8_parity.py
tests/: conftest.py  e2e_endpoints.py  test_accel.py  test_accel_capability.py  test_acceleration_helpers.py  test_action_context_local_outputs.py  test_action_context_partition.py  test_activity_gw601.py  test_adaptive_fit_ladder_gw521.py  test_adaptive_rung_gw491.py  test_api_binding.py  test_architecture_boundaries.py  test_arm_compile_pgw517.py  (+321 more)
workers/pytorch-worker/: pyproject.toml
workers/pytorch-worker/src/pytorch_worker/: main.py  model_memory_manager.py
workers/pytorch-worker/src/pytorch_worker/utils/: config.py
(+361 files in other folders)
