[project]
name = "gen-worker"
version = "0.13.29"
description = "A library used to build custom functions in Cozy Creator's serverless function platform."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Paul Fidika", email = "paul@fidika.com" }
]
keywords = ["serverless", "ai", "ml", "inference", "cozy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.80.0",
    "msgspec>=0.18.6",
    "protobuf>=6.30.0",
    "requests>=2.32.0",
    "boto3>=1.41.0",
    "psutil>=7.0.0",
    "pyyaml>=6.0.0",
    "blake3>=1.0.0",
    "huggingface-hub>=0.26.0",
    # gen_worker.convert (GGUF quantization tooling; small, pure-python)
    "gguf>=0.10.0",
    # endpoint.lock is TOML; msgspec.toml.encode needs tomli-w at bake time.
    "tomli-w>=1.0.0",
]
# Pillow (image I/O) and numpy/soundfile (audio I/O) are lazy-imported by
# gen_worker.io and live in the [images] / [audio] extras — the base wheel
# stays lean for plain-Python (API-proxy) endpoints.

[project.urls]
Homepage = "https://github.com/cozy-creator/python-gen-worker"
Repository = "https://github.com/cozy-creator/python-gen-worker"
Issues = "https://github.com/cozy-creator/python-gen-worker/issues"

[project.scripts]
gen-worker = "gen_worker.cli:main"

[project.optional-dependencies]
torch = [
    "torch>=2.11.0",
    "safetensors>=0.7.0",
    # Emergency nf4 fit rung (gw#420) — automatic on CUDA hosts, needs bnb.
    "bitsandbytes>=0.45.0; sys_platform == 'linux' or sys_platform == 'win32'",
]
vision = [
    "torchvision>=0.26.0",
]
datasets = [
    # Lazy-imported by gen_worker.convert.dataset for parquet shard reads.
    "pyarrow>=17.0.0",
]
images = [
    "Pillow>=10.0",
]
audio = [
    "soundfile>=0.12",
    "numpy>=1.24",
]
video = [
    "av>=12",
    "numpy>=1.24",
]
dev = [
    "av>=12",
    # Real tiny-pipeline residency tests (gw#417) build local diffusers pipes;
    # transformers+accelerate activate the bnb nf4 convert integration test.
    "accelerate>=1.0",
    "diffusers>=0.36.0",
    "grpcio-tools>=1.80.0",
    "transformers>=4.55",
    "mypy>=1.10.0",
    # Real-parquet dataset-materialization tests (gw#425).
    "pyarrow>=17.0.0",
    "ruff>=0.6.0",
    "pytest>=9.0.0",
    "types-PyYAML>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gen_worker"]

[tool.hatch.build.targets.sdist]
include = ["src/gen_worker", "README.md", "pyproject.toml"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["gen_worker.pb.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["gen_worker.testing.*"]
ignore_errors = true

# Modules moved verbatim from the old gen_worker.conversion carry that
# package's untyped-defs exemption (was cozy_convert's [tool.mypy] config).
[[tool.mypy.overrides]]
module = ["gen_worker.convert.*"]
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"
# Generated + legacy modules are lint-exempt (mirrors the mypy overrides above):
# pb/ is generated; testing/ carries its own debt. Ruff is enforced
# on the actively-maintained core.
extend-exclude = [
    "src/gen_worker/pb",
    "src/gen_worker/testing",
]

[tool.ruff.lint]
# E402: gen_worker defers heavy imports (torch, request_context, cli
# subcommands) below module-level guards on purpose so `import gen_worker` and
# `gen-worker --help` stay cheap. Not a defect.
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]  # intentional public re-exports

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: network tests against real tiny HF models"]
# Prefer the working-tree source so a bare `pytest` never tests a stale wheel.
# The supported command is still `uv run --extra dev pytest` (pytest is a dev
# extra); tests/conftest.py hard-fails if gen_worker resolves outside src/.
pythonpath = ["src"]

# NOTE: the CUDA 12.8 torch pin below is uv-only — it is read by `uv sync` /
# `uv build` in this repo, NOT by `pip`. `pip install gen-worker[torch]`
# resolves torch from PyPI (a CPU or default-CUDA build) and may differ. Tenant
# images built by Tensorhub pin their own torch/CUDA build; this pin only fixes
# the local dev + CI environment.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
