[project]
name = "image-gen"
version = "0.1.0"
description = "Image generation function"
readme = "README.md"
authors = [
    { name = "Oghenetega Biokoro", email = "teggyg123@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "diffusers",
    "torch",
    "pillow",
    "msgpack",
    "protobuf",
    "gen-worker"
]


[[tool.uv.index]]
name = "mydev"
url = "http://137.184.153.104:3141/root/mydev/+simple"
explicit = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true