[project]
name = "flux2-klein-4b"
version = "0.1.0"
description = "Flux2-klein-4B example (inference-only; models via [tool.cozy.models])"
requires-python = ">=3.12"
dependencies = [
    "diffusers @ git+https://github.com/huggingface/diffusers.git@99e2cfff27dec514a43e260e885c5e6eca038b36",
    "transformers>=4.56,<5",
    "accelerate",
    "pillow",
]

[dependency-groups]
dev = ["mypy>=1.10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flux2_klein_4b"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.cozy]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.cozy.build]
gpu = true
torch = "2.10.0"

[tool.cozy.resources]
vram_gb = 12

[tool.cozy.models]
# Use Cozy Hub snapshot (backed by R2) instead of pulling from Hugging Face at runtime.
flux2-klein-4b = "black-forest-labs/flux-2-klein-4b"
