[project]
name = "flux2_klein_image"
version = "1.0.0"
description = "FLUX.2-klein-4B turbo text-to-image example (real GPU inference)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "gen-worker>=0.13",
    "diffusers>=0.39.0",
    # diffusers' Flux2Klein text encoder is Qwen3ForCausalLM; transformers 5.0
    # reworked internals that load path depends on (see inference-endpoints
    # flux.2-klein-4b for the same pin). Keep on the 4.57 line.
    "transformers>=4.57,<5",
    "accelerate>=1.0",
    "sentencepiece",
    "protobuf",
    "msgspec>=0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flux2_klein_image"]

[tool.gen_worker]
main = "flux2_klein_image.main"
