[project]
name = "from-scratch"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.11.0",
    "gen-worker>=0.7.35",
    "safetensors",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["from_scratch.py"]
