[project]
name = "hello-world"
version = "0.1.0"
description = "Minimal hello-world worker function example"
readme = "README.md"
authors = [
    { name = "Paul Fidika", email = "paul@fidika.com" }
]
requires-python = ">=3.10"
dependencies = [
    "gen-worker>=0.1.4"
]

[dependency-groups]
dev = [
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hello_world"]

[tool.uv.sources]
gen-worker = { path = "../.." }

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
python_executable = ".venv/bin/python3"

[tool.cozy]
functions.modules = ["hello_world"]

[tool.cozy.runtime]
base_image = "ghcr.io/cozy/python-worker:cuda12.1-torch2.6"
