[project]
name = "hub_artifact_echo"
version = "1.0.0"
description = "CPU endpoint bound to a tag-qualified Hub artifact (th#763 cold-ref e2e)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "gen-worker>=0.12.0,<0.15",
]

[dependency-groups]
dev = ["mypy>=1.10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hub_artifact_echo"]

[tool.gen_worker]
main = "hub_artifact_echo.main"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true

# Tracks the in-repo gen-worker (unreleased @endpoint API), like marco-polo.
[tool.uv.sources]
gen-worker = { path = "../..", editable = true }
