[project]
name = "image-gen-legacy"
version = "0.1.0"
description = "Legacy-style image generation example (typed stub)"
requires-python = ">=3.12"
dependencies = [
    "gen-worker[torch]",
]

[dependency-groups]
dev = ["mypy>=1.10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/image_gen"]

[tool.uv.sources]
gen-worker = { path = "../.." }

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.cozy.build]
gpu = true
torch = ">=2.9"
