[project]
name = "image-gen"
version = "0.1.0"
description = "Image generation function"
readme = "README.md"
authors = [
    { name = "Oghenetega Biokoro", email = "teggyg123@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "diffusers",
    "pillow",
    "gen-worker[torch]>=0.1.4",
    "boto3",
    "blake3",
    "accelerate",
    "transformers"
]

[dependency-groups]
dev = [
    "mypy>=1.10.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/image_gen"]

[tool.uv.sources]
gen-worker = { path = "../.." }


[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
python_executable = ".venv/bin/python3"

[tool.cozy]
functions.modules = ["image_gen"]

[tool.cozy.runtime]
base_image = "ghcr.io/cozy/python-worker:cuda12.1-torch2.6"
