[project]
name = "marco_polo"
version = "1.0.0"
description = "Simple function for testing"
requires-python = ">=3.12"
dependencies = [
    "gen-worker>=0.3.10",
]

[dependency-groups]
dev = ["mypy>=1.10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marco_polo"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
