[project]
name = "marco_polo"
version = "1.0.0"
description = "Simple function for testing"
requires-python = ">=3.12,<3.13"
dependencies = [
    "gen-worker>=0.11.0,<0.12",
]

[dependency-groups]
dev = ["mypy>=1.10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marco_polo"]

[tool.gen_worker]
main = "marco_polo.main"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true

# The example tracks the in-repo gen-worker (the @endpoint API it uses is
# unreleased); published wheels can't run this source.
[tool.uv.sources]
gen-worker = { path = "../..", editable = true }
