[project]
name = "medasr-transcribe"
version = "0.1.0"
description = "MedASR transcription worker function example"
requires-python = ">=3.12"
dependencies = [
    "gen-worker[torch]",
    "numpy",
    "soundfile",
    "soxr",
    "transformers",
]

[dependency-groups]
dev = ["mypy>=1.10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/medasr_transcribe"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
