[project]
name = "multi-sdxl-checkpoints"
version = "0.1.0"
description = "Multi SDXL checkpoints example with payload-based model selection"
requires-python = ">=3.12"
dependencies = [
    "gen-worker[torch]",
    "diffusers",
    "transformers",
    "accelerate",
    "pillow",
]

[dependency-groups]
dev = ["mypy>=1.10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_sdxl_checkpoints"]

[tool.uv.sources]
gen-worker = { path = "../.." }

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.cozy]

[tool.cozy.build]
gpu = true
torch = "2.10.0"

[tool.cozy.resources]
vram_gb = 12  # Each SDXL variant needs ~8-10GB

# Define multiple model variants
# The scheduler will route requests to workers that have the required model in VRAM
[tool.cozy.models]
sdxl-base = "hf:stabilityai/stable-diffusion-xl-base-1.0"
sdxl-turbo = "hf:stabilityai/sdxl-turbo"
dreamshaper = "hf:Lykon/dreamshaper-xl-v2-turbo"
juggernaut = "hf:RunDiffusion/Juggernaut-XL-v9"
realvisxl = "hf:SG161222/RealVisXL_V5.0"
animagine = "hf:cagliostrolab/animagine-xl-3.1"
playground-v25 = "hf:playgroundai/playground-v2.5-1024px-aesthetic"
ssd-1b = "hf:segmind/SSD-1B"
pony-v6 = "hf:Runware/pony-xl-v6-diffusers"
illustrious-xl = "hf:drawhisper/illustrious-xl"
