[project]
name = "multi-sdxl-checkpoints"
version = "0.1.0"
description = "Multi SDXL checkpoints example with payload-based model selection"
requires-python = ">=3.12"
dependencies = [
    "gen-worker[torch]",
    "diffusers",
    "transformers",
    "accelerate",
    "pillow",
]

[dependency-groups]
dev = ["mypy>=1.10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_sdxl_checkpoints"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
