[project]
name = "openai-codex-worker"
version = "0.1.0"
description = "Example Cozy worker that shells out to OpenAI Codex CLI and streams JSONL events."
requires-python = ">=3.12"
dependencies = [
  "gen-worker",
  "msgspec",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openai_codex_worker"]

