[project]
name = "qwen-image-2512"
version = "0.1.0"
description = "Qwen Image 2512 generation function"
requires-python = ">=3.12"
dependencies = [
    "gen-worker[torch]",
    "diffusers @ git+https://github.com/huggingface/diffusers",
    "transformers>=4.51.3",
    "accelerate",
    "pillow",
]

[dependency-groups]
dev = ["mypy>=1.10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qwen_image_2512"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
