[project]
name = "sd15_image"
version = "1.0.0"
description = "Stable Diffusion 1.5 text-to-image example (real GPU inference)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "gen-worker>=0.11.0,<0.12",
    "diffusers>=0.31",
    "transformers>=4.46",
    "accelerate>=1.0",
    "msgspec>=0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sd15_image"]

[tool.gen_worker]
main = "sd15_image.main"

# The example tracks the in-repo gen-worker (the @endpoint API it uses is
# unreleased); published wheels can't run this source.
[tool.uv.sources]
gen-worker = { path = "../..", editable = true }
