[project]
name = "sd15"
version = "0.1.1"
description = "Stable Diffusion 1.5 example (inference-only; Cozy manifest via cozy.toml)"
requires-python = ">=3.12"
dependencies = [
    "diffusers",
    "transformers",
    "accelerate",
    "pillow",
]

[dependency-groups]
dev = ["mypy>=1.10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sd15"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
