[project]
name = "z-image-lora"
version = "0.1.0"
description = "Image generation with dynamic LoRA loading (z-image pattern)"
requires-python = ">=3.12"
dependencies = [
    "gen-worker[torch]",
    "diffusers>=0.36.0",
    "transformers",
    "accelerate",
    "pillow",
    "peft",  # Required for LoRA support in diffusers
]

[dependency-groups]
dev = ["mypy>=1.10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/z_image_lora"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
