[project]
name = "zimage_hub_image"
version = "1.0.0"
description = "Z-Image-Turbo text-to-image served from a tensorhub repo-cas mirror (Hub binding)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "gen-worker>=0.9.1",
    "diffusers>=0.36",
    "transformers>=4.57,<5",
    "accelerate>=1.0",
    "msgspec>=0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zimage_hub_image"]

[tool.gen_worker]
main = "zimage_hub_image.main"
