[project]
name = "pytorch-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paul Fidika", email = "paul@fidika.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.5.2",
    "diffusers>=0.32.2",
    "dotenv>=0.9.9",
    "pillow>=11.1.0",
    "pydantic>=2.10.6",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.50.1",
]

[project.scripts]
pytorch-worker = "pytorch_worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]