[project]
name = "image-gen"
version = "0.1.0"
description = "This is a function package for the image generation use case."
readme = "README.md"
authors = [
    { name = "Leommm-byte", email = "leom20031@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.23",
    "blake3>=1.0.4",
    "compel>=2.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
