[project]
name = "examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paul Fidika", email = "paul@fidika.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gen-orchestrator>=0.1.9",
]


[project.scripts]
examples = "examples:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
gen_orchestrator = { path = "../" }
